--- a/scss/var.scss
+++ b/scss/var.scss
@@ -4,4 +4,12 @@
   font-weight: 600;
 }
 
+@mixin gridItem {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 2.14%;
+}
+
 $borderPrimaryColor: #d5d6dd;
+$aHoverColor: #E0F0FF;
+$searchBarColor: #09A958;
