--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -35,7 +35,7 @@ main {
         width: 126px;
         height: 66px;
         border-radius: 20px 0;
-        background-image: url('../img/btn_srch.png');
+        background-image: url('../img/content1/btn_srch.png');
         background-repeat: no-repeat;
         background-position: 50% 50%;
         background-color: $searchBarColor;
@@ -46,23 +46,499 @@ main {
   }
   .content-area.second {
     .wrap {
-      @include gridItem;
+      display: flex;
       height: 391px;
       .col1 {
+        flex-basis: 74.42%;
         .slide {
           a {
-            display: grid;
+            position: relative;
+            height: 391px;
+            display: flex;
+            justify-content: space-between;
             .ad-text {
-              grid-column: 1/2;
+              padding-top: 20px;
+              width: 31.1%;
+              .slide-title {
+                @include lineClamp;
+                -webkit-line-clamp: 3;
+                max-height: 150px;
+                line-height: 50px;
+                font-weight: 600;
+                font-size: 42px;
+                letter-spacing: -0.08em;
+                white-space: pre-line;
+              }
+              .slide-content {
+                @include lineClamp;
+                -webkit-line-clamp: 4;
+                height: 112px;
+                line-height: 28px;
+                margin: 30px 0 0 0;
+                font-size: 16px;
+                letter-spacing: -1px;
+                white-space: pre-line;
+              }
             }
             .ad-img {
-              grid-column: 2/4;
+              width: 65.7%;
+            }
+            .btn-group {
+              bottom: 10px;
+              left: 0;
+            }
+          }
+          @for $i from 1 through 3 {
+            &:nth-child(#{$i}) .ad-img {
+              background: url('../img/content2/ad-img0#{$i}.jpg');
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+          }
+          &:not(:first-child) {
+            display: none;
+          }
+        }
+      }
+      .col2 {
+        margin-left: 32px;
+        width: 326px;
+        .wt {
+          position: relative;
+          display: flex;
+          align-items: center;
+          width: 100%;
+          height: 50px;
+          border: 1px solid $borderPrimaryColor;
+          border-radius: 25px;
+          padding: 6px 10px 6px 30px;
+          box-sizing: border-box;
+          .wt-icon-area {
+            width: 32px;
+            height: 32px;
+            background: url('../img/content2/wt01.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            float: left;
+          }
+          .wt-tem-area {
+            float: left;
+            a {
+              position: relative;
+              display: block;
+              height: 32px;
+              line-height: 32px;
+              margin-left: 10px;
+              color: #e30034;
+              font-weight: bold;
+              &:hover .wt-text {
+                opacity: 1;
+              }
+              .wt-text {
+                position: absolute;
+                top: -32px;
+                transform: translateX(-45%);
+                width: 304px;
+                height: 30px;
+                line-height: 30px;
+                border-radius: 6px;
+                padding: 0 8px;
+                text-align: center;
+                font-size: 14px;
+                font-weight: 400;
+                color: white;
+                background-color: #333;
+                opacity: 0;
+                transition: .3s;
+                &:before {
+                  content: '';
+                  display: inline-block;
+                  position: absolute;
+                  top: 30px;
+                  left: 50%;
+                  height: 0;
+                  border: 5px solid transparent;
+                  border-bottom: 0;
+                  border-top-color: #333;
+                }
+                &:after {
+                  content: '';
+                  display: inline-block;
+                  position: absolute;
+                  top: 30px;
+                  left: 50%;
+                  height: 0;
+                  border: 5px solid transparent;
+                  border-bottom: 0;
+                  border-top-color: #333;
+                }
+              }
+            }
+          }
+          .wt-dust-btn {
+            position: relative;
+            width: 15px;
+            height: 32px;
+            margin-left: 5px;
+            cursor: pointer;
+            &:after {
+              margin: 13.5px 3.5px;
+              content: '';
+              display: inline-block;
+              position: absolute;
+              top: 0;
+              left: 0;
+              right: 0;
+              bottom: 0;
+              width: 0;
+              height: 0;
+              margin: auto;
+              border: 4px solid transparent;
+              border-top-width: 5px;
+              border-bottom: 0;
+              border-top-color: #333;
+              transition: all .3s;
+            }
+            .lst {
+              display: none;
+              width: 180px;
+              top: 40px;
+              right: -20px;
+              ul {
+                li {
+                  width: 100%;
+                  font-size: $fontSizesm;
+                  box-sizing: border-box;
+                }
+              }
+            }
+          }
+          .wt-slide-area {
+            a {
+              display: block;
+              margin-left: 10px;
+              font-size: $fontSizesm;
+              height: 32px;
+              line-height: 32px;
+              &:not(:first-child) {
+                display: none;
+              }
+              span {
+                height: 21px;
+                line-height: 19px;
+                margin-left: 5px;
+                padding: 0 5px;
+                border: 1px solid #333;
+                border-radius: 20px;
+              }
+            }
+          }
+        }
+        .mayor {
+          position: relative;
+          height: calc( 100% - 50px );
+          padding-top: 58px;
+          box-sizing: border-box;
+          &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            right: -30px;
+            bottom: 0;
+            z-index: -1;
+            width: 266px;
+            height: 336px;
+            background: url('../img/content2/img_mayor.png');
+            background-repeat: no-repeat;
+            background-position: 100% 10px;
+          }
+          .img {
+            display: block;
+            width: 166px;
+            height: 68px;
+            background: url('../img/content2/img_mayor_tit.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+          }
+          & > a {
+            display: inline-flex;
+            align-items: center;
+            position: relative;
+            margin: 20px 0 0;
+            font-weight: 600;
+            font-size: 16px;
+            color: #0f6dbb;
+            letter-spacing: -1px;
+            border-bottom: 1px solid #0f6dbb;
+            &:after {
+              content: '';
+              display: block;
+              width: 6px;
+              height: 6px;
+              margin-left: 5px;
+              border: 1px solid #0f6dbb;
+              border-width: 1px 1px 0 0;
+              transform: rotate(45deg);
+            }
+          }
+          ul {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            position: absolute;
+            left: 10px;
+            right: 10px;
+            bottom: 2px;
+            li {
+              flex-basis: 50%;
+              padding: 3px 2px;
+              box-sizing: border-box;
+              a {
+                position: relative;
+                display: block;
+                padding: 8px;
+                font-size: 15px;
+                background: #ebecf1;
+                text-align: center;
+                box-sizing: border-box;
+                border-radius: 20px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  .content-area.third {
+    margin-top: 40px;
+    .wrap {
+      display: flex;
+      justify-content: space-between;
+      .col1, .col2, .col3, .col4 {
+        width: 23.2%;
+      }
+      .main-box {
+        position: relative;
+        width: 100%;
+        height: 243px;
+      }
+      .col1 {
+        .main-box {
+          background: url('../img/content3/bg_sns.jpg');
+          background-repeat: no-repeat;
+          background-size: cover;
+          ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            position: absolute;
+            left: 0;
+            bottom: 15%;
+            width: 100%;
+            li {
+              width: 42px;
+              height: 42px;
+              margin: 0 4px;
+              @for $i from 0 through 5 {
+                &:nth-child(#{$i+1}) a {
+                  background: url('../img/content3/ico_sns.png');
+                  background-size: cover;
+                  background-position: ($i*-42px) 0;
+                  display: block;
+                  width: 100%;
+                  height: 100%;
+                }
+              }
             }
           }
         }
       }
       .col2 {
-        grid-column: 4/5;
+        h2 {
+          overflow: hidden;
+          a {
+            float: right;
+            font-size: 14px;
+            font-weight: 300;
+            line-height: 27px;
+            letter-spacing: 0;
+          }
+        }
+        .main-box {
+          border: 1px solid #dadada;
+          background: #fbfbfb;
+          padding: 22px 24px;
+          box-sizing: border-box;
+          .box-header {
+            overflow: hidden;
+            padding-bottom: 10px;
+            border-bottom: 1px solid $borderPrimaryColor;
+            .img-area {
+              float: left;
+              display: inline-block;
+            }
+            span {
+              display: inline-block;
+              padding-top: 15px;
+              font-weight: bold;
+            }
+            a {
+              float: right;
+            }
+          }
+          .box-content {
+            display: flex;
+            margin: 20px -5px 10px;
+            .count {
+              padding: 0 5px 10px;
+              flex-basis: 50%;
+              text-align: center;
+              font-size: 22px;
+              font-weight: bold;
+              &.left {
+                border-right: 1px solid $borderPrimaryColor;
+                span {
+                  background: #dc6373;
+                }
+              }
+              &.right {
+                span {
+                  background: #349039;
+                }
+              }
+              span {
+                display: block;
+                padding: 8px;
+                margin-bottom: 20px;
+                width: 100%;
+                box-sizing: border-box;
+                color: white;
+                font-size: 15px;
+                font-weight: bold;
+                border-radius: 5px;
+              }
+            }
+          }
+        }
+      }
+      .col3, .col4 {
+        .main-box {
+          border: 1px solid $borderPrimaryColor;
+          .img-area {
+            height: 75%;
+            background: url('../img/content3/hot_issues01.png');
+            background-size: cover;
+          }
+          .text-area {
+            padding: 17px 10px 0;
+            text-align: center;
+          }
+        }
+      }
+      .col4 {
+        h2 {
+          text-align: right;
+          a {
+            font-size: 14px;
+            font-weight: 300;
+            line-height: 27px;
+            letter-spacing: 0;
+          }
+        }
+        .main-box {
+          .img-area {
+            background: url('../img/content3/hot_issues02.png');
+            background-size: cover;
+          }
+        }
+      }
+    }
+  }
+  .content-area.fourth {
+    margin-top: 60px;
+    padding: 30px 0;
+    background: #eaebed;
+    .wrap {
+      ul {
+        display: flex;
+        justify-content: space-around;
+        li {
+          width: 130px;
+          @for $i from 0 through 9 {
+            &:nth-child(#{$i+1}) a div {
+              background-image: url('../img/content4/ico_part.png');
+              background-size: cover;
+              background-position: ($i*-86px) 0;
+            }
+          }
+          a {
+            display: block;
+            width: 100%;
+            height: 100%;
+            div {
+              width: 86px;
+              height: 86px;
+              margin: 0 22px;
+              background-color: white;
+              border-radius: 50%;
+            }
+            p {
+              text-align: center;
+              color: black;
+              line-height: 1.2;
+              margin: 10px 0 0;
+            }
+          }
+        }
+      }
+    }
+  }
+  .content-area.fifth {
+    margin-top: 60px;
+    height: 276px;
+    .wrap {
+      display: flex;
+      .col1 {
+        flex-basis: 17.14%;
+        ul {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          height: 100%;
+          margin-right: 29.5px;
+          li {
+            width: 100%;
+            a {
+              display: block;
+              padding: 0 30px;
+              height: 52px;
+              line-height: 52px;
+              text-align: center;
+              border-radius: 20px 0;
+              background: #e3edf4;
+              font-weight: 600;
+              font-size: 18px;
+              letter-spacing: -2px;
+              transition: all .3s cubic-bezier(0.4, 0, 0.2, 1);
+              &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                width: 22px;
+                height: 2px;
+                margin: auto 0;
+                background-position: -154px -41px;
+                background-image: url('../img/sp_main.png');
+                z-index: 5;
+              }
+            }
+          }
+        }
+      }
+      .col2 {
+        flex-basis: calc( 100% - 17.14% );
       }
     }
   }
