--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -505,21 +505,43 @@ main {
           flex-direction: column;
           justify-content: space-between;
           height: 100%;
-          margin-right: 29.5px;
           li {
-            width: 100%;
+            width: 87.7%;
+            &.on {
+              width: 94.17%;
+              transition: all .3s cubic-bezier(0.4, 0, 0.2, 1);
+            }
             a {
+              position: relative;
               display: block;
               padding: 0 30px;
               height: 52px;
               line-height: 52px;
-              text-align: center;
+              text-align: left;
               border-radius: 20px 0;
               background: #e3edf4;
               font-weight: 600;
               font-size: 18px;
               letter-spacing: -2px;
               transition: all .3s cubic-bezier(0.4, 0, 0.2, 1);
+              &.on {
+                background: #1769ab;
+                color: white;
+                &:after {
+                  content: '';
+                  position: absolute;
+                  top: 0;
+                  right: 0;
+                  bottom: 0;
+                  width: 14px;
+                  height: 14px;
+                  margin: auto 0;
+                  right: 20px;
+                  background-position: -136px -35px;
+                  background-image: url('../img/sp_main.png');
+                  z-index: 5;
+                }
+              }
               &:after {
                 content: '';
                 position: absolute;
@@ -539,6 +561,357 @@ main {
       }
       .col2 {
         flex-basis: calc( 100% - 17.14% );
+        .notice, .test-information {
+          display: flex;
+          li {
+            width: 20%;
+            margin-left: 5%;
+            position: relative;
+            border-bottom: 1px solid black;
+            a {
+              .date {
+                display: inline-block;
+                top: 0;
+                left: 0;
+                width: 65px;
+                height: 65px;
+                border-radius: 50%;
+                background: #eaebed;
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 65px;
+                text-align: center;
+              }
+              .dept {
+                display: inline-block;
+                position: absolute;
+                top: 22px;
+                right: 0;
+                font-size: 15px;
+                color: #666;
+              }
+              .tit {
+                @include lineClamp;
+                -webkit-line-clamp: 3;
+                height: 84px;
+                line-height: 28px;
+                font-size: 22px;
+                font-weight: bold;
+                letter-spacing: -2px;
+                margin-top: 17px;
+              }
+              .desc {
+                @include lineClamp;
+                -webkit-line-clamp: 3;
+                height: 72px;
+                line-height: 24px;
+                margin-top: 18px;
+                font-size: 16px;
+                letter-spacing: -1px;
+                color: #666;
+                margin: 19px 0;
+              }
+            }
+          }
+        }
+        .report {
+          display: none;
+          flex-wrap: wrap;
+          height: 276px;
+          li {
+            display: flex;
+            flex-basis: 45%;
+            margin-left: 5%;
+            border-bottom: 1px solid black;
+            align-items: center;
+            a {
+              width: 100%;
+              .date {
+                display: inline-block;
+                top: 0;
+                left: 0;
+                width: 65px;
+                height: 65px;
+                border-radius: 50%;
+                background: #eaebed;
+                font-weight: 600;
+                font-size: 14px;
+                line-height: 65px;
+                text-align: center;
+              }
+              .tit {
+                display: inline;
+                margin-left: 15px;
+                font-size: 18px;
+                font-weight: bold;
+                letter-spacing: -2px;
+              }
+            }
+          }
+        }
+        .test-information {
+          display: none;
+        }
+      }
+    }
+  }
+  .content-area.sixth {
+    margin-top: 60px;
+    .wrap {
+      padding-bottom: 30px;
+      border-bottom: 1px solid black;
+      display: flex;
+      justify-content: space-between;
+      .col1, .col2 {
+        flex-basis: 48.8%;
+      }
+      .col1 {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        h2 {
+          overflow: hidden;
+          width: 100%;
+          height: 26px;
+          line-height: 26px;
+          margin: 0 0 20px;
+          a {
+            float: right;
+            font-size: 14px;
+            font-weight: 400;
+            height: 26px;
+            line-height: 26px;
+          }
+        }
+        .main-box {
+          width: 47.54%;
+          height: 243px;
+          &:nth-of-type(1) {
+            background: url('../img/content6/colorful_daegu01.jpg');
+            background-size: cover;
+          }
+          &:nth-of-type(2) {
+            background: url('../img/content6/colorful_daegu02.jpg');
+            background-size: cover;
+          }
+        }
+      }
+      .col2 {
+        flex-basis: 48.8%;
+        /*.swiper {
+          overflow: hidden;
+          height: 243px;
+          .swiper-container {
+            width: 5522px;
+            height: 100%;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: nowrap;
+            .swiper-slide {
+              width: 47.54%;
+              height: 243px;
+              @for $i from 1 through 17 {
+                &:nth-child(#{$i}) {
+                  background: url('../img/content6/alarm#{$i}.jpg');
+                  background-size: cover;
+                }
+              }
+            }
+          }
+        }
+        */
+      }
+    }
+  }
+  .content-area.seventh {
+    margin-top: 60px;
+    .wrap {
+      display: flex;
+      justify-content: space-between;
+      .col1, .col2 {
+        flex-basis: 48.8%;
+      }
+      .col1 {
+        background: #eff7fb;
+        padding: 30px 80px 0;
+        box-sizing: border-box;
+        h2 {
+          text-align: center;
+        }
+        .swiper {
+          position: relative;
+          .swiper-wrapper {
+            .swiper-slide {
+              ul {
+                display: flex;
+                flex-wrap: wrap;
+                li {
+                  width: 25%;
+                  a {
+                    display: block;
+                    .img-box {
+                      width: 82px;
+                      height: 82px;
+                      margin: 0 auto;
+                      border-radius: 33px;
+                      background: white;
+                    }
+                    span {
+                      margin-top: 8px;
+                      width: 100%;
+                      height: 38px;
+                      text-align: center;
+                      @include lineClamp;
+                      -webkit-line-clamp: 2;
+                      display: inline-block;
+                      font-size: 15px;
+                      line-height: 1.3;
+                      letter-spacing: -1px;
+                    }
+                  }
+                }
+              }
+              &:nth-child(1) {
+                ul li {
+                  @for $i from 1 through 8 {
+                    &:nth-child(#{$i}) a .img-box {
+                      background-image: url('../img/content7/img#{$i}.png');
+                      background-size: cover;
+                    }
+                  }
+                }
+              }
+              &:nth-child(2) {
+                ul li {
+                  @for $i from 1 through 8 {
+                    &:nth-child(#{$i}) a .img-box {
+                      background-image: url('../img/content7/img#{$i+8}.png');
+                      background-size: cover;
+                    }
+                  }
+                }
+              }
+              &:nth-child(3) {
+                ul li {
+                  @for $i from 1 through 8 {
+                    &:nth-child(#{$i}) a .img-box {
+                      background-image: url('../img/content7/img#{$i+16}.png');
+                      background-size: cover;
+                    }
+                  }
+                }
+              }
+              &:not(:first-child) {
+                display: none;
+              }
+            }
+          }
+          .btn-prev {
+            position: absolute;
+            background-position: 0 -54px;
+            top: calc(50% - 15px);
+            left: -60px;
+            transform: translateY(-50%);
+          }
+          .btn-next {
+            position: absolute;
+            background-position: -54px -54px;
+            top: calc(50% - 15px);
+            right: -60px;
+            transform: translateY(-50%);
+          }
+          .btn-custom-stop {
+            position: absolute;
+            width: 31px;
+            height: 31px;
+            top: -45px;
+            right: -20px;
+            background-image: url('../img/sp_main.png');
+            background-position: -287px 0;
+          }
+          .btn-more {
+            position: absolute;
+            width: 31px;
+            height: 31px;
+            top: -45px;
+            right: -53px;
+            background-image: url('../img/sp_main.png');
+            background-position: -322px 0;
+          }
+        }
+      }
+      .col2 {
+        padding: 35px;
+        box-sizing: border-box;
+        border: 1px solid $borderPrimaryColor;
+        & > ul {
+          width: 100%;
+          display: flex;
+          li {
+            position: relative;
+            flex-basis: 25%;
+            height: 54px;
+            border: 1px solid $borderPrimaryColor;
+            border-bottom: 1px solid #17b464;
+            border-left: 0;
+            box-sizing: border-box;
+            transition: .3s;
+            &.active {
+              border-bottom: 53px solid #17b464;
+              h2 {
+                color: white;
+              }
+              &:nth-child(1) h2:before {
+                background-position: -112px -85px;
+              }
+              &:nth-child(2) h2:before {
+                background-position: -138px -85px;
+              }
+              &:nth-child(3) h2:before {
+                background-position: -168px -85px;
+              }
+              &:nth-child(4) h2:before {
+                background-position: -197px -85px;
+              }
+            }
+            &:first-child {
+              border-left: 1px solid $borderPrimaryColor;
+            }
+            h2 {
+              position: absolute;
+              top: calc(27px - 12.52px);
+              text-align: center;
+              margin: 0;
+              font-size: 17px;
+              &:before {
+                content: '';
+                margin: -5px 5px 0 0;
+                vertical-align: middle;
+                display: inline-block;
+                width: 22px;
+                height: 27px;
+                background: url('../img/sp_main.png');
+                background-position: -112px -54px;
+              }
+            }
+            &:nth-child(2) h2:before {
+              width: 26px;
+              background-position: -138px -54px;
+            }
+            &:nth-child(3) h2:before {
+              width: 25px;
+              background-position: -168px -54px;
+            }
+            &:nth-child(4) h2:before {
+              width: 25px;
+              background-position: -197px -54px;
+            }
+          }
+        }
+
+        .people, .buisness, .tour {
+          display: none;
+        }
       }
     }
   }
