--- a/scss/component.scss
+++ b/scss/component.scss
@@ -111,3 +111,14 @@ h2 {
   font-size: 20px;
   letter-spacing: -2px;
 }
+
+a.href-icon:after {
+  content: '';
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  margin: -4px 4px 0;
+  vertical-align: middle;
+  background: url('../img/sp_main.png');
+  background-position: -209px -35px;
+}
