--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,6 +1,101 @@
 #header {
+  position: fixed;
+  width: 100%;
   height: 97px;
   border-bottom: 1px solid $borderPrimaryColor;
+  z-index: 20;
+  background: white;
+  .gnb-hover {
+    position: absolute;
+    background: white;
+    width: 100%;
+    height: auto;
+    top: 0;
+    z-index: 10;
+    border-bottom: 1px solid #024da1;
+    .wrap {
+      .top-banner {
+        width: 100%;
+        ul {
+          li {
+            float: left;
+            width: 20.71%;
+            height: 101px;
+            margin: 0 30px;
+            padding: 0 40px;
+            border-bottom: 1px solid #024da1;
+            box-sizing: border-box;
+            a {
+              display: inline-block;
+              font-size: 20px;
+              font-weight: bold;
+              width: 100%;
+              height: 101px;
+              line-height: 101px;
+              text-align: center;
+              &:hover {
+                color: #024da1;
+              }
+            }
+          }
+        }
+      }
+      .content {
+        width: 100%;
+        overflow: hidden;
+        ul {
+          float: left;
+          width: 25%;
+          padding: 13px 30px;
+          box-sizing: border-box;
+          li {
+            padding: 8px 0 8px 8px;
+            border-bottom: 1px solid #f2f2f2;
+            box-sizing: border-box;
+            cursor: pointer;
+            &:hover {
+              background: #f4faff;
+              a {
+                color: #024da1;
+              }
+            }
+            a {
+              position: relative;
+              display: inline-block;
+              width: 100%;
+              height: 100%;
+              font-size: 15px;
+              letter-spacing: -1px;
+              &:after {
+                content: '';
+                display: inline-block;
+                position: absolute;
+                top: 50%;
+                right: 5px;
+                width: 5px;
+                height: 5px;
+                border: 2px solid #a7a7a7;
+                border-width: 2px 2px 0 0;
+                transform: translateY(-50%) rotate(45deg);
+              }
+              &.href-icon:after {
+                position: relative;
+                width: 15px;
+                height: 13px;
+                top: auto;
+                right: auto;
+                margin: -4px 0 0 8px;
+                border: 0;
+                vertical-align: middle;
+                transform: rotate(0);
+                background: url('../img/ico_blank.png') no-repeat 0 0;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
   .wrap {
     position: relative;
     .logo {
@@ -35,9 +130,6 @@
         }
       }
     }
-    .gnb-hover {
-      display: none;
-    }
     .util-wrap {
       position: absolute;
       top: 0;
@@ -52,6 +144,7 @@
           position: relative;
           font-size: 13px;
           color: #444;
+          cursor: pointer;
           &:nth-child(1), &:nth-child(2) {
             padding: 0 30px 0 10px;
           }
@@ -68,6 +161,8 @@
             border-bottom: 0;
             border-top-color: #333;
             transition: all .3s;
+            cursor: pointer;
+            z-index: 1;
           }
           &:nth-child(1):after {
             content: '';
@@ -92,8 +187,8 @@
             display: block;
             padding-top: 4px;
             .menu {
-              width: 28px;
-              height: 24px;
+              width: 29px;
+              height: 23px;
               margin-left: 30px;
               background: url('../img/img_sitemap.png');
               background-size: contain;
