--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,4 +1,5 @@
 main {
+  padding-top: 97px;
   .youtube-content {
     display: none;
   }
@@ -698,28 +699,27 @@ main {
       }
       .col2 {
         flex-basis: 48.8%;
-        /*.swiper {
-          overflow: hidden;
-          height: 243px;
-          .swiper-container {
-            width: 5522px;
-            height: 100%;
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: nowrap;
-            .swiper-slide {
-              width: 47.54%;
-              height: 243px;
-              @for $i from 1 through 17 {
-                &:nth-child(#{$i}) {
-                  background: url('../img/content6/alarm#{$i}.jpg');
-                  background-size: cover;
-                }
-              }
-            }
-          }
-        }
-        */
+        // .swiper {
+        //   overflow: hidden;
+        //   height: 243px;
+        //   .swiper-container {
+        //     width: 5522px;
+        //     height: 100%;
+        //     display: flex;
+        //     justify-content: space-between;
+        //     flex-wrap: nowrap;
+        //     .swiper-slide {
+        //       width: 47.54%;
+        //       height: 243px;
+        //       @for $i from 1 through 17 {
+        //         &:nth-child(#{$i}) {
+        //           background: url('../img/content6/alarm#{$i}.jpg');
+        //           background-size: cover;
+        //         }
+        //       }
+        //     }
+        //   }
+        // }
       }
     }
   }
@@ -847,6 +847,7 @@ main {
         & > ul {
           width: 100%;
           display: flex;
+          margin-bottom: 16px;
           li {
             position: relative;
             flex-basis: 25%;
@@ -908,9 +909,152 @@ main {
             }
           }
         }
+        .menu, .people, .buisness, .tour {
+          ul {
+            overflow: hidden;
+            li {
+              position: relative;
+              float: left;
+              width: calc(33.33% - 20px);
+              padding: 14px 0 13px 12px;
+              border-bottom: 1px dashed #c2bbb2;
+              box-sizing: border-box;
+              &:not(:nth-child(3n+1)) {
+                margin-left: 30px;
+              }
+              &:before {
+                content: '';
+                display: inline-block;
+                position: absolute;
+                top: 0;
+                left: 3px;
+                bottom: 0;
+                width: 2px;
+                height: 2px;
+                margin: auto 0;
+                background: #333;
+              }
+              a {
+                font-size: 14px;
+                line-height: 1.4;
+                letter-spacing: -1px;
+                white-space: nowrap;
 
+              }
+            }
+          }
+        }
         .people, .buisness, .tour {
           display: none;
+        }
+      }
+    }
+  }
+  .content-area.eighth {
+    border-top: 1px solid $borderPrimaryColor;
+    margin-top: 60px;
+    .wrap {
+      padding: 20px 0 20px 180px;
+      box-sizing: border-box;
+      ul {
+        overflow: hidden;
+        li {
+          float: left;
+          a {
+            display: block;
+            position: relative;
+            width: 184px;
+            margin: 2px 10px;
+            padding: 10px 15px;
+            background: #ebecf1;
+            line-height: 30px;
+            text-align: center;
+            &:after {
+              margin-right: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+  .content-area.nineth {
+    height: 60px;
+    background: #1c293c;
+    box-sizing: border-box;
+    .wrap {
+      & > ul {
+        & > li {
+          float: left;
+          position: relative;
+          padding-left: 25px;
+          width: 25%;
+          height: 60px;
+          line-height: 60px;
+          font-size: 15px;
+          color: white;
+          border-left: 1px solid white;
+          border-right: 1px solid white;
+          cursor: pointer;
+          box-sizing: border-box;
+          &:after {
+            content: '';
+            display: inline-block;
+            position: absolute;
+            top: 0;
+            right: 20px;
+            bottom: 0;
+            width: 8px;
+            height: 8px;
+            margin: auto;
+            border: 1px solid #ddd;
+            border-width: 0 1px 1px 0;
+            transform: translateY(-25%) rotate(45deg);
+            transition: all .3s;
+          }
+          &:not(:first-child) {
+            border-left: 0;
+          }
+          &:nth-child(3) .drag-box {
+            overflow-y: auto;
+          }
+          .drag-box {
+            position: absolute;
+            width: 100%;
+            height: 0;
+            top: 0;
+            left: 0;
+            overflow-y: scroll;
+            border: 1px solid $borderPrimaryColor;
+            box-sizing: border-box;
+            background: white;
+            transition: .7s;
+            z-index: -1;
+            &.active {
+              height: 300px;
+              top: -300px;
+              z-index: 1;
+            }
+            ul {
+              padding: 6px 0;
+              width: 100%;
+              box-sizing: border-box;
+              li {
+                height: 30px;
+                line-height: 30px;
+                box-sizing: border-box;
+                padding: 0;
+                a {
+                  display: block;
+                  width: 100%;
+                  font-size: 14px;
+                  height: 30px;
+                  line-height: 30px;
+                  padding: 3px 15px;
+                  box-sizing: border-box;
+                }
+              }
+            }
+          }
         }
       }
     }
