--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -51,7 +51,19 @@ main {
       height: 391px;
       .col1 {
         flex-basis: 74.42%;
+        position: relative;
+        .btn-group {
+          bottom: 10px;
+          left: 0;
+        }
         .slide {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          transition: .7s;
+          &:nth-child(2), &:nth-child(3) {
+            opacity: 0;
+          }
           a {
             position: relative;
             height: 391px;
@@ -84,10 +96,6 @@ main {
             .ad-img {
               width: 65.7%;
             }
-            .btn-group {
-              bottom: 10px;
-              left: 0;
-            }
           }
           @for $i from 1 through 3 {
             &:nth-child(#{$i}) .ad-img {
@@ -97,7 +105,6 @@ main {
             }
           }
           &:not(:first-child) {
-            display: none;
           }
         }
       }
@@ -215,22 +222,22 @@ main {
             }
           }
           .wt-slide-area {
-            a {
-              display: block;
-              margin-left: 10px;
-              font-size: $fontSizesm;
-              height: 32px;
-              line-height: 32px;
-              &:not(:first-child) {
-                display: none;
-              }
-              span {
-                height: 21px;
-                line-height: 19px;
-                margin-left: 5px;
-                padding: 0 5px;
-                border: 1px solid #333;
-                border-radius: 20px;
+            overflow: hidden;
+            .wt-slide-wrapper {
+              a {
+                display: block;
+                margin-left: 10px;
+                font-size: $fontSizesm;
+                height: 32px;
+                line-height: 32px;
+                span {
+                  height: 21px;
+                  line-height: 19px;
+                  margin-left: 5px;
+                  padding: 0 5px;
+                  border: 1px solid #333;
+                  border-radius: 20px;
+                }
               }
             }
           }
@@ -508,9 +515,9 @@ main {
           height: 100%;
           li {
             width: 87.7%;
+            transition: all .3s cubic-bezier(0.4, 0, 0.2, 1);
             &.on {
               width: 94.17%;
-              transition: all .3s cubic-bezier(0.4, 0, 0.2, 1);
             }
             a {
               position: relative;
@@ -698,28 +705,34 @@ main {
         }
       }
       .col2 {
-        flex-basis: 48.8%;
-        // .swiper {
-        //   overflow: hidden;
-        //   height: 243px;
-        //   .swiper-container {
-        //     width: 5522px;
-        //     height: 100%;
-        //     display: flex;
-        //     justify-content: space-between;
-        //     flex-wrap: nowrap;
-        //     .swiper-slide {
-        //       width: 47.54%;
-        //       height: 243px;
-        //       @for $i from 1 through 17 {
-        //         &:nth-child(#{$i}) {
-        //           background: url('../img/content6/alarm#{$i}.jpg');
-        //           background-size: cover;
-        //         }
-        //       }
-        //     }
-        //   }
-        // }
+        position: relative;
+        width: 48.8%;
+        h2 {
+          margin-bottom: 20px;
+        }
+        .swiper {
+          width: 100%;
+          overflow: hidden;
+          .swiper-wrapper {
+            height: 243px;
+            .swiper-slide {
+              float: left;
+              width: 19.45vw;
+              height: 243px;
+              @for $i from 1 through 17 {
+                &:nth-child(#{$i}) {
+                  background: url('../img/content6/alarm#{$i}.jpg');
+                  background-size: cover;
+                }
+              }
+            }
+          }
+        }
+        .btn-group {
+          position: absolute;
+          top: 0;
+          right: 0;
+        }
       }
     }
   }
